JS: roll add-opens call into the fat-jar
This avoids the need to add the additional --add-opens on the command
line.

Signed-off-by: Harvey Harrison <harvey.harrison@gmail.com>